--- a/src/App.css
+++ b/src/App.css
@@ -7,35 +7,30 @@
 }
 
 .blockDimension {
-  height: 100px;
-  width: 100px;
+  height: 10.31vh;
+  width: 10.31vh;
 }
 
 .blockInfoDimension {
-  border: 1px;
-  borderStyle:"solid";
-  height: 260px;
+  height: 26.83vh;
 }
 
 .flex-container {
   display: flex;
   flex-direction: row;
-  height: 150px;
+  height: 15.47vh;
   overflow-x: auto;
   overflow-y: hidden;
 }
 
 .block {
-  width: 100px;
-  height: 100px;
-  margin: 5px;
+  width: 10.31vh;
+  height: 10.31vh;
+  margin: 0.51vh;
   cursor: pointer;
 }
 
 .block:hover {
-  width: 100px;
-  height: 100px;
-  margin: 5px;
   transform: scale(1.1);
 }
 
@@ -44,8 +39,8 @@
 }
 
 .padding20LR {
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 1.02vw;
+  padding-right: 1.02vw;
 }
 
 .blockChainText {
@@ -53,13 +48,13 @@
 }
 
 .blockViewContainer {
-  height: 300px;
+  height: 30.95vh;
   align:center;
   text-align:center;
 }
 
 .buttonBar {
-  margin: 15px;
+  margin: 1.02vw;
 }
 
 .pending-trans-div {
@@ -67,22 +62,21 @@
 }
 
 .pending-records-button {
-  padding-right: 20px;
+  padding-right: 1.02vw;
 }
 
 .blockChainParent {
-  width: 100%;
+  /*width: 100%;*/
 }
 
 .blockDetailsParent {
   width: 100%;
-  height: 430px;
+  height: 44.37vh;
 }
 
 .footerBar {
   position: absolute;
-  bottom: 0px;
-  width: 100%;
+  /*bottom: 0;*/
 }
 
 .footerDiv {
