--- a/src/App.css
+++ b/src/App.css
@@ -70,18 +70,16 @@
 }
 
 .blockDetailsParent {
-  width: 100%;
   height: 44.37vh;
 }
 
 .footerBar {
   position: absolute;
-  /*bottom: 0;*/
 }
 
 .footerDiv {
   text-align:center;
-  padding-top: 10px;
+  padding-top: 0.80vh;
 }
 
 .marginZero {
@@ -90,8 +88,7 @@
 
 .tw-name {
   text-align:left;
-  margin-left:110px !important;
-  padding-bottom:10px !important;
+  margin-left:6.54vw !important;
 }
 
 .headerBar {
@@ -99,7 +96,7 @@
 }
 
 .marginTwenty {
-  margin: 20px;
+  margin: 2.12vh 1.19vh;
 }
 
 .odoHeaderText {
@@ -115,31 +112,61 @@
 }
 
 .odoMeterText {
-  padding-top: 70px;
+  padding-top: 7.45vh;
 }
 
 .odo-tableParent {
-  height:280px;
+  height:29.81vh;
   overflow:auto;
 }
 
 .odoRecordsView {
-  height: 300px;
+  height: 30.95vh;
   align: center;
   text-align: center;
 }
+
+.findCarView {
+  height: 30.95vh;
+  align: center;
+  text-align: center;
+}
+
+.findCarSwitch {
+  padding-right: 1.0vw;
+}
+
+.findCarInput {
+  height: 4.25vh;
+  width: 29.76vw;
+  font-size: 3.72vh;
+}
+
+.odoCheckButton {
+  padding: 2vh;
+  text-align: center;
+}
+
+.odoButtonText {
+  margin-bottom: 0 !important;
+}
+
+.odoAnswer {
+  padding: 2vh;
+}
+
 
 .miningButtonParent {
   align-content: center;
 }
 .miningButton {
   text-align: center;
-  height: 50px;
-  width: 400px;
+  height: 5.32vh;
+  width: 23.80vw;
 }
 
 .singleBlockText {
-  padding-top: 10px;
+  padding-top: 1.06vh;
 }
 
 .singleBlockContent {
@@ -147,7 +174,7 @@
 }
 
 .empty-block {
-  padding-top:70px;
+  padding-top:7.45vh;
 }
 
 .block-field {
@@ -156,4 +183,17 @@
 
 .margin-zero {
   margin: 0 !important;
+}
+
+.pending-trans-container {
+  height: 82vh;
+}
+
+.no-pending {
+  padding-left: 1vw;
+}
+
+.popupCard {
+  font-size: 2.27vh;
+  word-wrap: break-word;
 }
